changing to a more generic use case than just prostate cancer

--- a/report/lastpaper/bibliography.bib
+++ b/report/lastpaper/bibliography.bib
@@ -6,6 +6,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{alwan2010monitoring,
+  title={Monitoring and surveillance of chronic non-communicable diseases: progress and capacity in high-burden countries},
+  author={Alwan, Ala and MacLean, David R and Riley, Leanne M and d'Espaignet, Edouard Tursan and Mathers, Colin Douglas and Stevens, Gretchen Anna and Bettcher, Douglas},
+  journal={The Lancet},
+  volume={376},
+  number={9755},
+  pages={1861--1868},
+  year={2010},
+  publisher={Elsevier}
+}
+
 @article{ayer2012or,
   title={OR Forum—A POMDP approach to personalize mammography screening decisions},
   author={Ayer, Turgay and Alagoz, Oguzhan and Stout, Natasha K},
@@ -61,6 +72,17 @@ year={2016},
 publisher={Elsevier}
 }
 
+@article{brown2009assessing,
+title={Assessing the association between trends in a biomarker and risk of event with an application in pediatric {HIV/AIDS}},
+author={Brown, Elizabeth R.},
+journal={The Annals of Applied Statistics},
+volume={3},
+number={3},
+pages={1163--1182},
+year={2009},
+publisher={Institute of Mathematical Statistics}
+}
+
 @article{crawford2003epidemiology,
   title={Epidemiology of prostate cancer},
   author={Crawford, E David},
@@ -73,7 +95,8 @@ publisher={Elsevier}
 }
 
 @article{epsteinGG2014,
-  title={The 2014 International Society of Urological Pathology (ISUP) consensus conference on Gleason grading of prostatic carcinoma},
+  title={The 2014 International Society of Urological Pathology (ISUP) consensus conference on 
+  Gleason grading of prostatic carcinoma},
   author={Epstein, Jonathan I and Egevad, Lars and Amin, Mahul B and Delahunt, Brett and Srigley, John R and Humphrey, Peter A},
   journal={The American journal of surgical pathology},
   volume={40},
@@ -81,6 +104,28 @@ publisher={Elsevier}
   pages={244--252},
   year={2016},
   publisher={Wolters Kluwer}
+}
+ 
+@article{GlobalCancerStats2012,
+title={Global cancer statistics, 2012},
+author={Torre, Lindsey A and Bray, Freddie and Siegel, Rebecca L and Ferlay, Jacques and Lortet-Tieulent, Joannie and Jemal, Ahmedin},
+journal={CA: A Cancer Journal for Clinicians},
+volume={65},
+number={2},
+pages={87--108},
+year={2015},
+publisher={Wiley}
+}
+
+@article{henderson2011surveillance,
+  title={Surveillance protocol kidney transplant biopsies: their evolving role in clinical practice},
+  author={Henderson, LK and Nankivell, BJ and Chapman*, JR},
+  journal={American Journal of Transplantation},
+  volume={11},
+  number={8},
+  pages={1570--1575},
+  year={2011},
+  publisher={Wiley Online Library}
 }
 
 @article{inoue2018comparative,
@@ -92,6 +137,26 @@ publisher={Elsevier}
   pages={1--9},
   year={2018},
   publisher={Am Coll Physicians}
+}
+
+@article{laird1982random,
+  title={Random-effects models for longitudinal data},
+  author={Laird, Nan M and Ware, James H},
+  journal={Biometrics},
+  pages={963--974},
+  year={1982},
+  publisher={JSTOR}
+}
+
+@article{lieberman2012guidelines,
+  title={Guidelines for colonoscopy surveillance after screening and polypectomy: a consensus update by the US Multi-Society Task Force on Colorectal Cancer},
+  author={Lieberman, David A and Rex, Douglas K and Winawer, Sidney J and Giardiello, Francis M and Johnson, David A and Levin, Theodore R},
+  journal={Gastroenterology},
+  volume={143},
+  number={3},
+  pages={844--857},
+  year={2012},
+  publisher={Elsevier}
 }
 
 @article{loeb2013systematic,
@@ -115,6 +180,18 @@ publisher={Elsevier}
   year={2014},
   publisher={MedReviews, LLC}
 }
+
+@article{mcwilliams2008surveillance,
+  title={Surveillance bronchoscopy in lung transplant recipients: risk versus benefit},
+  author={McWilliams, Tanya J and Williams, Trevor J and Whitford, Helen M and Snell, Gregory I},
+  journal={The Journal of Heart and Lung Transplantation},
+  volume={27},
+  number={11},
+  pages={1203--1209},
+  year={2008},
+  publisher={Elsevier}
+}
+ 
 
 @article{newcomer1997temporal,
   title={Temporal trends in rates of prostate cancer: declining incidence of advanced stage disease, 1974 to 1994},
@@ -155,6 +232,36 @@ isbn = {9781439872864}
   pages={149--164},
   year={2015},
   publisher={Oxford University Press}
+}
+
+@article{streitz1993endoscopic,
+  title={Endoscopic surveillance of Barrett's esophagus. Does it help?},
+  author={Streitz, Jr JM and Andrews, Jr CW and Ellis, Jr FH},
+  journal={The Journal of thoracic and cardiovascular surgery},
+  volume={105},
+  number={3},
+  pages={383--7},
+  year={1993}
+}
+
+@incollection{steimle2017markov,
+  title={Markov decision processes for screening and treatment of chronic diseases},
+  author={Steimle, Lauren N and Denton, Brian T},
+  booktitle={Markov Decision Processes in Practice},
+  pages={189--222},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{taylor2013real,
+title={Real-time individual predictions of prostate cancer recurrence using joint models},
+author={Taylor, Jeremy M.G. and Park, Yongseok and Ankerst, Donna P. and Proust-Lima, Cecile and Williams, Scott and Kestin, Larry and Bae, Kyoungwha and Pickles, Tom and Sandler, Howard},
+journal={Biometrics},
+volume={69},
+number={1},
+pages={206--213},
+year={2013},
+publisher={Wiley}
 }
 
 @article{tomer2019personalized,
@@ -557,16 +664,7 @@ publisher={Foundation for Open Access Statistics}
   publisher={Wiley Online Library}
 }
 
-@article{GlobalCancerStats2012,
-title={Global cancer statistics, 2012},
-author={Torre, Lindsey A and Bray, Freddie and Siegel, Rebecca L and Ferlay, Jacques and Lortet-Tieulent, Joannie and Jemal, Ahmedin},
-journal={CA: A Cancer Journal for Clinicians},
-volume={65},
-number={2},
-pages={87--108},
-year={2015},
-publisher={Wiley}
-}
+
 
 @article{potoskyPSAcancer,
 author = {Potosky, Arnold L and Miller, Barry A and Albertsen, Peter C and Kramer, Barnett S},
@@ -665,14 +763,7 @@ publisher={Wiley}
 
 
 
-@article{laird1982random,
-  title={Random-effects models for longitudinal data},
-  author={Laird, Nan M and Ware, James H},
-  journal={Biometrics},
-  pages={963--974},
-  year={1982},
-  publisher={JSTOR}
-}
+
 
 @article{erenay2014optimizing,
   title={Optimizing colonoscopy screening for colorectal cancer prevention and surveillance},
