--- a/report/lastpaper/main_manuscript.tex
+++ b/report/lastpaper/main_manuscript.tex
@@ -66,8 +66,7 @@
 %  the examples below in creating your author and affiliation information.
 %  Also consult a recent issue of the journal for examples of formatting.
 
-\title[This is an Example of Recto Running Head]{This is an Example of
-an Article Title}
+\title[Personalized Surveillance Schedules]{Personalized Schedules for Burdensome Surveillance Tests in Chronic Diseases}
 
 %  Here are examples of different configurations of author/affiliation
 %  displays.  According to the Biometrics style, in some instances,
@@ -143,8 +142,6 @@ $^{4}$Department of Biomedical Data Sciences, Leiden University Medical Center, 
 %Wilma Flinstone$^{2}$, and Barney Rubble$^{2}$ \\
 %$^{1}$Department of Statistics, University of Warwick, Coventry CV4 7AL, U.K \\
 %$^{2}$Department of Geology, University of Bedrock, Bedrock, Kansas, U.S.A.}
-
-
 \begin{document}
 
 %  This will produce the submission and review information that appears
@@ -194,7 +191,7 @@ Accepted March} 0000.}
 %  and a period at the end of the list.
 %
 \begin{keywords}
-A key word; But another key word; Still another key word; Yet another key word.
+Chronic diseases; Invasive medical tests; Joint models; Personalized schedules; Prostate biopsy; Surveillance
 \end{keywords}
 
 %  As usual, the \maketitle command creates the title and author/affiliations
@@ -223,7 +220,7 @@ A key word; But another key word; Still another key word; Yet another key word.
 \input{mainmatter/introduction}
 \input{mainmatter/jointmodel}
 \input{mainmatter/schedule}
-\input{mainmatter/demo}
+\input{mainmatter/results}
 \input{mainmatter/sim_study}
 \input{mainmatter/discussion}
 
