--- a/report/lastpaper/mainmatter/sim_study.tex
+++ b/report/lastpaper/mainmatter/sim_study.tex
@@ -1,3 +1,15 @@
 % !TEX root =  ../main_manuscript.tex 
-\section{Simulation}
+\section{Simulation Study}
 \label{sec:sim_study}
+Although we demonstrated our schedules for a real AS patient, we also intend to analyze the efficacy of our schedules in the whole PRIAS cohort. Comparing personalized schedules with fixed schedules using a real word RCT is not possible because of two reasons. First, patients in PRIAS have already had their biopsies. Second, we do not know the true time of Gleason upgrade for real patients. Instead, we utilize the joint model fitted to the PRIAS cohort to generate simulated cohorts that are replicas of PRIAS cohort. 
+
+Although the personalized decision making approach is motivated by the PRIAS study, it is not possible to evaluate it directly on the PRIAS dataset. This is because the patients in PRIAS have already had their biopsies as per the PRIAS protocol. In addition, the true time of cancer progression is interval or right censored for all patients, making it impossible to correctly estimate the delay in detection of cancer progression due to a particular schedule. To this end, we conduct an extensive simulation study to find the utility of personalized, PRIAS, and fixed/heuristic schedules. For a realistic comparison, we simulate patient data from the joint model fitted to the PRIAS dataset. The simulated population has the same ten year follow-up period as the PRIAS study. In addition, the estimated relations between DRE and PSA measurements, and the risk of cancer progression are retained in the simulated population.
+
+\subsection{Simulation Setup}
+From this population, we first sample 500 datasets, each representing a hypothetical AS program with 1000 patients in it. We generate a true cancer progression time for each of the ${\mbox{500} \times \mbox{1000}}$ patients and then sample a set of DRE and PSA measurements at the same follow-up visit times as given in PRIAS protocol. We then split each dataset into training (750 patients) and test (250 patients) parts, and generate a random and non‐informative censoring time for the training patients. We next fit a joint model of the specification given in Equations (\ref{eq:long_model_dre}), (\ref{eq:long_model_psa}), and (\ref{eq:rel_risk_model}) to each of the 500 training datasets and obtain MCMC samples from the 500 sets of the posterior distribution of the parameters. 
+
+In each of the 500 hypothetical AS programs, we utilize the corresponding fitted joint models to develop cancer progression risk profiles for each of the ${\mbox{500} \times \mbox{250}}$ test patients. We make the decision of biopsies for patients at their pre-scheduled follow-up visits for DRE and PSA measurements, on the basis of their estimated personalized cumulative risk of cancer progression. These decisions are made iteratively until a positive biopsy is observed. A recommended gap of one year between consecutive biopsies\cite{bokhorst2015compliance} is also maintained. Subsequently, for each patient, an entire personalized schedule of biopsies is obtained.
+
+We evaluate and compare both personalized and currently practiced schedules of biopsies in this simulation study. Comparison of the schedules is based on the number of biopsies scheduled and the corresponding delay in the detection of cancer progression. We evaluate the following currently practiced fixed/heuristic schedules: biopsy annually, biopsy every one and a half years, biopsy every two years and biopsy every three years. We also evaluate the biopsy schedule of the PRIAS program. For the personalized biopsy schedules, we evaluate schedules based on three fixed risk thresholds: 5\%, 10\%, and 15\%, corresponding to a missed cancer progression being 19, 9, and 5.5 times more harmful than an unnecessary biopsy \cite{vickers2006decision}, respectively. We also implement a personalized schedule where for each patient, visit-specific risk thresholds are chosen using $\mbox{F}_1$ score.
+
+\subsection{Results}
