--- a/report/lastpaper/mainmatter/introduction.tex
+++ b/report/lastpaper/mainmatter/introduction.tex
@@ -1,12 +1,14 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Introduction}
 \label{sec:introduction}
-Prostate-specific antigen (PSA) based screening for prostate cancer has led to over-diagnosis of low and very low-grade prostate cancers~\citep{crawford2003epidemiology,newcomer1997temporal}. Many such cancers remain asymptomatic during a patient's lifetime. Hence, (over-) treatment upon diagnosis for low-grade cancers is nowadays substituted by prostate cancer active surveillance (AS). The goal of AS is to monitor patients continually and advise treatment only upon observing signs of cancer progression. To this end, tumors are evaluated periodically via PSA (ng/mL) blood test; digital rectal examination (DRE) for shape and size of the tumor; and biopsy Gleason grade group~\citep{epsteinGG2014}, a pathology report. Among these, the biopsy Gleason grade group is the strongest indicator of cancer-related outcomes. Consequently, a commonly used trigger for treatment in AS is Gleason upgrade, defined as increase in repeat biopsy Gleason grade group from group~1 to 2 or higher.
+Chronic non-communicable diseases (e.g., cancer, renal, cardiovascular diseases, etc.) are the primary cause of human deaths worldwide~\citep{alwan2010monitoring}. Early identification of unfavorable changes in disease state (referenced as \textit{progression} hereafter) may prevent many of these deaths. To this end, surveillance tests are performed routinely for several diseases. Among all surveillance modalities, the most accurate or gold standard ones are often invasive. For example, biopsies, endoscopies, and colonoscopies are conducted repeatedly for diagnosing progression in prostate cancer~\citep{bokhorst2016decade}, Barrett's esophagus~\citep{streitz1993endoscopic}, and colorectal cancer~\citep{lieberman2012guidelines}, respectively. Similarly, repeat biopsies are employed to detect allograft deterioration in lung~\citep{mcwilliams2008surveillance} and kidney transplant~\citep{henderson2011surveillance} patients. 
 
-Most AS programs are about a decade old. Hence, the midterm pros and cons of AS have become apparent only recently. Among these, a crucial and contentious issue is the use of yearly biopsies for all patients~\citep{loeb2014heterogeneity}. Yearly biopsies help to detect Gleason upgrade timely (maximum delay of one year, Figure~\ref{fig:time_delay}). However, biopsies are painful, prone to complications, and recovery can take months~\citep{loeb2013systematic}. Yearly biopsies may be advantageous for patients who progress fast. Although, they also schedule many unnecessary biopsies for slow and/or non-progressing patients (50\% proportion in some AS programs). Moreover, patients do not always comply with such schedules~\citep{bokhorst2015compliance}. This may lead to delayed detection of Gleason upgrade and reduce the effectiveness of AS.
+Commonly, fixed schedules (e.g., every six months) are utilized for invasive tests. The frequency of tests varies between diseases and cohorts. Due to the periodical nature of schedules, progression is always detected with a time delay (see Figure). More frequent tests can lead to less time delay in detection of progression. However, invasive tests are difficult to conduct, are prone to severe complications, and cause patient discomfort. Furthermore, fixed schedules impose an equal medical burden, ignoring the speed of progression in patients. Hence, the frequency of invasive tests holds important implications for patients.
 
-Our aim is to balance the number of biopsies (burden) and the time delay in the detection of Gleason upgrade (less is beneficial), better than fixed schedules. For this purpose, we intend to create personalized biopsy schedules that utilize patient-specific accumulated clinical data (age, historical PSA and DRE, and biopsy results). Previous alternatives to yearly biopsies can be divided into three categories. First, heuristic schedules such as biennial biopsies~\citep{inoue2018comparative}. Their drawback is that they ignore the difference in rate of Gleason upgrade between cohorts and/or patients (Web Figure...), and also over the follow-up period within the same cohort and/or patient. Second, personalized biopsy decisions employing partially observable Markov decision processes (POMDP); for prostate cancer~\citep{zhang2012optimization,barnett2018optimizing}, list for other cancers~\citep{alagoz2010operations}. Although, the efficacy of POMDP's is limited by the choice of reward function. Choosing rewards is difficult because even for the simplest of the POMDP's, infinite possible reward sets result into the same decision~\citep{vickers2006decision}. Third, personalized schedules can also be obtained by optimizing a loss function of clinical parameters of interest~\citep{bebu2017optimal,rizopoulos2015personalized}, including our previous work~\citep{tomer2019personalized}. However, our method scheduled only one biopsy at a time, and thus ignored the total burden of biopsies in a schedule. In addition, we utilized certain loss functions that inherently took clinically unacceptable high risks (e.g., 50\%) of Gleason upgrade. 
+In this paper, we aim to balance the number of invasive tests (burden) and the time delay in detection of progression (less is beneficial) better than fixed schedules. For this purpose, we intend to create personalized test schedules that exploit patient-specific accumulated clinical data during follow-up. This data includes baseline characteristics of patients; results from previous invasive tests; and longitudinal biomarker, physical examination, and medical imaging measurements, etc. Previous approaches for personalized schedules may be divided into three categories. First, heuristic methods such as decision making flowcharts (citation here). Although, flowcharts discretize continuous clinical outcomes, often rely only the latest data measurement, and ignore the measurement error in observed outcomes. Second, personalized test decisions utilizing partially observable Markov decision processes~\citep{alagoz2010operations, steimle2017markov}. However, their application with continuous outcomes is limited by the curse of dimensionality. Third, personalized schedules obtained by optimizing a loss function of clinical parameters of interest~\citep{bebu2017optimal,rizopoulos2015personalized}, including our previous work on scheduling biopsies in prostate cancer~\citep{tomer2019personalized}. In this work, we will employ the third approach.
 
-Our methodology in this work is as follows. First, we obtain a full specification of the joint distribution of the longitudinal PSA and DRE measurements, and time of Gleason upgrade (Section~\ref{sec:jointmodel}). We achieve this using joint models for time-to-event and longitudinal data~\citep{tsiatis2004joint,rizopoulos2012joint}. They are inherently personalized because they exploit patient-specific random effects to model all observed data. We fit our model to the data of the world's largest AS cohort, PRIAS, with 7813 patients from 100 medical centers worldwide, employing a common study protocol~\citep{bokhorst2016decade}. Subsequently, we use the fitted joint model to predict the personalized cumulative-risk of Gleason upgrade for new patients, over their whole follow-up period (Section~\ref{sec:schedule}). The predictions utilize their complete longitudinal PSA and DRE values, and previous biopsy results. We then propose biopsies on all those future follow-up visits where a patient's conditional cumulative-risk of Gleason upgrade is above a certain threshold (e.g., 10\% risk). We automate the choice of this threshold by optimizing a loss function of the two relevant features of a biopsy schedule, namely, the number of biopsies, and the expected time delay in detection of Gleason upgrade. The latter is also estimated in a patient-specific manner, for both fixed and personalized schedules. Thus patients and doctors can compare schedules before making a choice.
+First, we develop a full specification of the joint distribution of patient-specific accumulated clinical data and time of \textit{progression}. We achieve this using joint models for time-to-event and longitudinal data~\citep{tsiatis2004joint,rizopoulos2012joint}. We exploit joint models because they are inherently personalized. Specifically, they exploit patient-specific random effects~\citep{laird1982random} to model longitudinal outcomes without discretizing them. We subsequently employ the fitted joint model for new patients, to estimate their patient-specific cumulative-risk profile over the whole follow-up period. These risk predictions utilize their complete observed clinical data. We then schedule invasive tests on all those future follow-up visits where a patient's conditional cumulative-risk of progression is above a certain threshold (e.g., 10\% risk). We automate the choice of this threshold and the resulting schedule. More specifically, we optimize a function of the number of tests in a schedule and the expected time delay in the detection of progression. We estimate this delay in a patient-specific manner for both fixed and personalized schedules, thus facilitating shared-decision of test schedules.
 
-In Section~\ref{sec:demo} we briefly discuss the parameter estimates of the fitted joint model, and demonstrate the personalized schedules for real PRIAS patients. To compare the personalized and fixed schedules, we conduct an extensive and realistic simulation study based on a replica of the patients from the PRIAS cohort in Section~\ref{sec:sim_study}. We discuss the advantages and limitations of our work in Section~\ref{sec:discussion}.
+This research is motivated by the problem of scheduling biopsies~\citep{nieboer2018active} in the world's largest prostate cancer active surveillance (AS) study PRIAS~\citep{bokhorst2016decade}. It has 7813 patients from 100 medical centers worldwide, employing a common study protocol. These patients have low and very-low grade prostate cancer, often over-diagnosed due to prostate-specific antigen (PSA) based screening tests~\citep{crawford2003epidemiology}. The goal of AS is to delay serious treatments (e.g., surgery, chemotherapy, etc.) until cancer progression is observed. For this purpose, patients are monitored continually via PSA (ng/mL) blood tests, digital rectal examination (DRE) for shape and size of the tumor, and biopsy Gleason grade group~\citep{epsteinGG2014}. Since the latter is the strongest indicator of cancer-related outcomes, treatment is commonly advised upon observing an increase (cancer progression) in a patient's biopsy Gleason grade group. Currently, the most common biopsy schedule is yearly biopsies~\citep{loeb2014heterogeneity}. However, this leads to many unnecessary biopsies in slow/non-progressing patients (50\% proportion in some cohorts). Biopsy burden combined with patient non-compliance to frequent biopsies~\citep{bokhorst2015compliance} has raised concerns regarding the optimal biopsy schedule. Prostate cancer is the second most frequently diagnosed cancer in males worldwide~\citep{GlobalCancerStats2012}. Hence, biopsy schedules tailored for each AS patient can reduce the overall burden of biopsies in a large number of patients.
+
+The rest of the paper is as follows. Section~\ref{sec:jointmodel} briefly introduces the joint modeling framework. In Section~\ref{sec:schedule} we present the methodology for personalized schedules, and then demonstrate them for biopsies in AS patients in Section~\ref{sec:results}. Lastly, in Section~\ref{sec:sim_study} we show the efficacy of personalized schedules for AS patients via a realistic simulation study.
