code for simulations on home laptop

--- a/report/lastpaper/bibliography.bib
+++ b/report/lastpaper/bibliography.bib
@@ -83,6 +83,17 @@ year={2009},
 publisher={Institute of Mathematical Statistics}
 }
 
+@article{cook1994equivalence,
+title={On the equivalence of constrained and compound optimal designs},
+author={Cook, R. Dennis and Wong, Weng K.},
+journal={Journal of the American Statistical Association},
+volume={89},
+number={426},
+pages={687--692},
+year={1994},
+publisher={Taylor \& Francis Group}
+}
+
 @article{crawford2003epidemiology,
   title={Epidemiology of prostate cancer},
   author={Crawford, E David},
@@ -137,6 +148,17 @@ publisher={Wiley}
   pages={1--9},
   year={2018},
   publisher={Am Coll Physicians}
+}
+
+@article{krist2007timing,
+  title={Timing of repeat colonoscopy: disparity between guidelines and endoscopists’ recommendation},
+  author={Krist, Alex H and Jones, Resa M and Woolf, Steven H and Woessner, Sarah E and Merenstein, Daniel and Kerns, J William and Foliaco, Walter and Jackson, Paul},
+  journal={American journal of preventive medicine},
+  volume={33},
+  number={6},
+  pages={471--478},
+  year={2007},
+  publisher={Elsevier}
 }
 
 @article{laird1982random,
