--- a/report/lastpaper/mainmatter/discussion.tex
+++ b/report/lastpaper/mainmatter/discussion.tex
@@ -24,12 +24,12 @@ Metholodology key points:
 8. issues with cutoff choice methods
 
 Figure (all should be clear in black and white and in color):
-1. time delay explanation figure
-2. joint model figure
-3. figure of biopsy schedule in demo patient
-4. figure of distance explaining what we did
-5. simulation results boxplot
-6. figure of schedule markov decision like plot
+1. figure of delay explanation
+2. figure of dynamic risk
+3. figure of scheduling biopsies
+4. figure of biopsy schedule in demo patient
+5. figure of distance explaining what we did
+6. simulation results boxplot
 
 
 link to web-application
